# city_pollution

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  REFACTORING_SUMMARY.md  alembic.ini  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml  requirements.txt
.github/workflows/: pull_request_checks.yml  pull_request_main.yml
app/: dependencies.py  main.py
app/alembic/: env.py
app/config/: settings.py
app/db/: connection.py
app/dependencies/: dependencies.py
app/entities/: __init__.py  city.py  pollution.py
app/routers/: city.py  location.py  pollution.py
app/schemas/: city.py  pollution.py
app/services/: city.py  geocoder_service.py  location.py  openweather_service.py  pollution.py
city_pollution/: dependencies.py  main.py
city_pollution/alembic/: env.py
city_pollution/config/: settings.py
city_pollution/db/: connection.py
city_pollution/entities/: __init__.py  city.py  pollution.py
city_pollution/routers/: city.py  pollution.py
city_pollution/schemas/: city.py  pollution.py
city_pollution/services/: city.py  geocoder_service.py  openweather_service.py  pollution.py
data_project/: dependencies.py  main.py
data_project/alembic/: env.py
data_project/config/: settings.py
data_project/db/: connection.py
data_project/entities/: __init__.py  city.py
data_project/routers/: city.py  pollution.py
data_project/schemas/: pollution.py
data_project/services/: city.py  geocoder_service.py  (+2 more)
scripts/: init.sql
src/: dependencies.py  main.py
tests/: config.py  conftest.py
utils/: __init__.py  plotting.py
(+63 files in other folders)
