[tool.poetry]
name = "dataproject"
version = "0.1.0"
description = ""
authors = ["Milos Trifunovic <milos.trifunovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"
pandas = "^2.2.1"
uvicorn = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
pytest = "^8.1.1"
ruff = "^0.3.5"
pre-commit = "^3.7.0"
mypy = "^1.9.0"
black = { extras = ["d"], version = "^24.3.0" }
httpx = "^0.27.0"
pydantic-extra-types = "^2.6.0"
opencage = "^2.4.0"

[tool.black]
line-length = 88

[tool.ruff]
lint.select = ["E", "F", "I"]
lint.fixable = ["ALL"]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "app/alembic/*", "tests", "volumes"]
line-length = 88

[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
disallow_untyped_decorators = true
ignore_missing_imports = true
implicit_reexport = true
plugins = "pydantic.mypy"
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "app/alembic/*", "tests", "volumes"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
